{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 166,
  "lineage": "6f77732e-78a2-e5d4-5098-cc47adc541fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Por1_E",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060d9b1189130d007",
            "arn": "arn:aws:ec2:ap-south-1:236024603923:elastic-ip/eipalloc-060d9b1189130d007",
            "associate_with_private_ip": "10.0.1.22",
            "association_id": "eipassoc-04f27c6a60931d3e6",
            "domain": "vpc",
            "id": "eipalloc-060d9b1189130d007",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-04497b676075ef8ac",
            "private_dns": "ip-10-0-1-22.ap-south-1.compute.internal",
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-52-66-25-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.25.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Pro1_IG",
            "aws_network_interface.Pro1_Interface",
            "aws_security_group.allow_tls",
            "aws_subnet.Pro1_Subnet",
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_Pro1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:236024603923:instance/i-0f04ccbf374158d33",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f04ccbf374158d33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pro1_Terraform_main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04497b676075ef8ac"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04497b676075ef8ac",
            "private_dns": "ip-10-0-1-22.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_ip": "52.66.25.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a85827d3046666f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e514644aed75cbd",
            "tags": {
              "Name": "Web0set"
            },
            "tags_all": {
              "Name": "Web0set"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea9d62f71db7b748"
            ]
          },
          "dependencies": [
            "aws_network_interface.Pro1_Interface",
            "aws_security_group.allow_tls",
            "aws_subnet.Pro1_Subnet",
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Pro1_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:236024603923:internet-gateway/igw-03ef75f72e6fdddcf",
            "id": "igw-03ef75f72e6fdddcf",
            "owner_id": "236024603923",
            "tags": {
              "Name": "main_IG"
            },
            "tags_all": {
              "Name": "main_IG"
            },
            "vpc_id": "vpc-0afd83c8a101f58f5"
          },
          "dependencies": [
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Pro1_Interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:236024603923:network-interface/eni-04497b676075ef8ac",
            "id": "eni-04497b676075ef8ac",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:81:55:7b:6a:0d",
            "owner_id": "236024603923",
            "private_ip": "10.0.1.22",
            "private_ip_list": [
              "10.0.1.22"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.22"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ea9d62f71db7b748"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e514644aed75cbd"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.Pro1_Subnet",
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pro1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:236024603923:route-table/rtb-0bdd989c3b2b61b57",
            "id": "rtb-0bdd989c3b2b61b57",
            "owner_id": "236024603923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ef75f72e6fdddcf",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ef75f72e6fdddcf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_RT"
            },
            "tags_all": {
              "Name": "main_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afd83c8a101f58f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Pro1_IG",
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a090f5c73f92038",
            "route_table_id": "rtb-0bdd989c3b2b61b57",
            "subnet_id": "subnet-07e514644aed75cbd"
          },
          "dependencies": [
            "aws_internet_gateway.Pro1_IG",
            "aws_route_table.Pro1_route_table",
            "aws_subnet.Pro1_Subnet",
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:236024603923:security-group/sg-0ea9d62f71db7b748",
            "description": "Security group to allow SSH, HTTP, and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea9d62f71db7b748",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-http-https",
            "name_prefix": "",
            "owner_id": "236024603923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-http-https"
            },
            "tags_all": {
              "Name": "allow-ssh-http-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afd83c8a101f58f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pro1_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:236024603923:subnet/subnet-07e514644aed75cbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e514644aed75cbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236024603923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_SUBNET"
            },
            "tags_all": {
              "Name": "main_SUBNET"
            },
            "vpc_id": "vpc-0afd83c8a101f58f5"
          },
          "dependencies": [
            "aws_vpc.Pro1_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Pro1_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:236024603923:vpc/vpc-0afd83c8a101f58f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0959f7229d37e23af",
            "default_route_table_id": "rtb-04c6386bf629a3b88",
            "default_security_group_id": "sg-07018422207167c50",
            "dhcp_options_id": "dopt-00a4d498bc31d40ca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afd83c8a101f58f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c6386bf629a3b88",
            "owner_id": "236024603923",
            "tags": {
              "Name": "main_VPC"
            },
            "tags_all": {
              "Name": "main_VPC"
            }
          }
        }
      ]
    }
  ]
}